# snapr

./: Cargo.toml  Makefile  README.md
src/: main.rs
tests/: Makefile
tests/snap/: snapcraft.yaml
